--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #fff
+    color: #333
 }
 
 header {
@@ -24,14 +24,13 @@ header nav ul li {
 }
 
 header nav ul li a {
-    color: #fff;
+    color: #333;
     text-decoration: none;
 }
 
 section {
     padding: 2rem;
     margin: 1rem 0;
-    color: #fff
 }
 
 .project {
